--- a/0-SimpleLinux/Dockerfile
+++ b/0-SimpleLinux/Dockerfile
@@ -6,3 +6,4 @@ RUN apt-get install -y net-tools
 RUN apt-get install -y strace
 RUN apt-get install -y lsof
 RUN apt-get install -y htop
+RUN apt-get install -y vim
